[gd_scene load_steps=6 format=3 uid="uid://3enif81x2vhy"]

[ext_resource type="Script" path="res://ui/leaderboard.gd" id="1_o7f50"]
[ext_resource type="Texture2D" uid="uid://bytyh4qycp0kv" path="res://sprite/ui/spinner.png" id="2_npn4n"]

[sub_resource type="Animation" id="Animation_kxpbo"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Spinner:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_6m3f4"]
resource_name = "spin"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Spinner:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sf5ln"]
_data = {
"RESET": SubResource("Animation_kxpbo"),
"spin": SubResource("Animation_6m3f4")
}

[node name="Leaderboard" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_o7f50")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Top Scores"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Loader" type="Control" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6

[node name="Spinner" type="TextureRect" parent="VBoxContainer/Loader"]
custom_minimum_size = Vector2(140, 140)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -70.0
offset_top = -70.0
offset_right = 70.0
offset_bottom = 70.0
grow_horizontal = 2
grow_vertical = 2
rotation = 3.98269
pivot_offset = Vector2(70, 70)
texture = ExtResource("2_npn4n")
stretch_mode = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="VBoxContainer/Loader"]
libraries = {
"": SubResource("AnimationLibrary_sf5ln")
}
autoplay = "spin"

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Scores" type="VBoxContainer" parent="VBoxContainer/MarginContainer/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 80

[node name="NameEntry" type="LineEdit" parent="VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Your Name"

[node name="Score" type="Label" parent="VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 34
text = "1000"

[node name="Save" type="Button" parent="VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Save"

[node name="WebClient" type="HTTPRequest" parent="."]

[connection signal="pressed" from="VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/Save" to="." method="addScore"]
